force-app/main/default/objects/skilljar__Student__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Contact to the Student</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skilljar Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>