force-app/main/default/objects/skilljar__Student__c/fields/skilljar__Email__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>