force-app/main/default/objects/skilljar__Student__c/fields/skilljar__First_Name__c.field-meta.xml
<CustomField>
    <fullName>skilljar__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>