force-app/main/default/objects/skilljar__Student__c/fields/skilljar__Lead__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce lead to Student</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Skilljar Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>