force-app/main/default/objects/skilljar__Student__c/listViews/skilljar__All.listView-meta.xml
<ListView>
    <fullName>skilljar__All</fullName>
    <columns>NAME</columns>
    <columns>skilljar__Email__c</columns>
    <columns>skilljar__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>